# Huji-CS-C-Cpp

Ex1/: CMakeLists.txt  README.md  cipher.c  cipher.h  input.txt  main.c  output.txt  tests.c  tests.h
Ex2/: CMakeLists.txt  README.md  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
Ex3a/: CMakeLists.txt  README.md  markov_chain.c  markov_chain.h  tweets_generator.c
Ex3b/: CMakeLists.txt  README.md  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders  snakes_and_ladders.c  tweets_generator.c
Ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  mlpnetwork
Ex5/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  main.cpp
